update tutor bugs fixed

--- a/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
@@ -652,6 +652,7 @@
             lastName: lastName,
             email: email,
             password: password || null,
+            confirmPassword: confirmPassword || null,
             assignedCourses: selectedCourseIds
         };
         
