1. fix upload student bugs 2. change lastname to surname

--- a/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Student/Index.cshtml
@@ -78,7 +78,7 @@
                         <tr>
                             <th class="border-0 text-nowrap">Student ID</th>
                             <th class="border-0 text-nowrap d-none d-md-table-cell">Surname</th>
-                            <th class="border-0 text-nowrap d-none d-md-table-cell">First Name</th>
+                            <th class="border-0 text-nowrap d-none d-md-table-cell">FirstName</th>
                             <th class="border-0 text-nowrap d-none d-lg-table-cell">Email</th>
                             <th class="border-0 text-nowrap">Password</th>
                             <th class="border-0 text-nowrap d-none d-md-table-cell">Status</th>
@@ -160,11 +160,11 @@
                     @token
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="firstName" class="form-label">First Name </label>
+                            <label for="firstName" class="form-label">FirstName </label>
                             <input type="text" class="form-control" id="firstName" name="firstName" required>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="lastName" class="form-label">Last Name </label>
+                            <label for="lastName" class="form-label">SurName </label>
                             <input type="text" class="form-control" id="lastName" name="lastName" required>
                         </div>
                     </div>
@@ -226,11 +226,11 @@
                     <input type="hidden" id="editStudentId" name="editStudentId">
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="editFirstName" class="form-label">First Name </label>
+                            <label for="editFirstName" class="form-label">FirstName </label>
                             <input type="text" class="form-control" id="editFirstName" name="editFirstName" required>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="editLastName" class="form-label">Last Name </label>
+                            <label for="editLastName" class="form-label">SurName </label>
                             <input type="text" class="form-control" id="editLastName" name="editLastName" required>
                         </div>
                     </div>
@@ -296,8 +296,8 @@
                     <div class="alert alert-info">
                         <h6 class="alert-heading">Excel File Requirements:</h6>
                         <ul class="mb-0 mt-2">
-                            <li><strong>First Name</strong> (Optional)</li>
-                            <li><strong>Last Name</strong> (Optional)</li>
+                            <li><strong>FirstName</strong> (Optional)</li>
+                            <li><strong>SurName</strong> (Optional)</li>
                             <li><strong>Email</strong> (Required)</li>
                             <li><strong>Student ID</strong> (Required)</li>
                         </ul>
