--- a/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Tutor/Index.cshtml
@@ -76,8 +76,8 @@
                 <table class="table table-hover mb-0 responsive-table">
                     <thead class="table-light">
                         <tr>
-                            <th class="border-0 text-nowrap">First Name</th>
-                            <th class="border-0 text-nowrap">Last Name</th>
+                            <th class="border-0 text-nowrap">FirstName</th>
+                            <th class="border-0 text-nowrap">SurName</th>
                             <th class="border-0 text-nowrap d-none d-lg-table-cell">Email</th>
                             <th class="border-0 text-nowrap d-none d-md-table-cell">Password</th>
                             <th class="border-0 text-nowrap d-none d-md-table-cell">Status</th>
@@ -186,11 +186,11 @@
                 <form id="addTutorForm">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="firstName" class="form-label">First Name</label>
+                            <label for="firstName" class="form-label">FirstName</label>
                             <input type="text" class="form-control" id="firstName" name="firstName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="lastName" class="form-label">Last Name</label>
+                            <label for="lastName" class="form-label">SurName</label>
                             <input type="text" class="form-control" id="lastName" name="lastName" required>
                         </div>
                         <div class="col-12 col-md-6">
@@ -249,11 +249,11 @@
                     <input type="hidden" id="editTutorId" name="tutorId">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
-                            <label for="editFirstName" class="form-label">First Name</label>
+                            <label for="editFirstName" class="form-label">FirstName</label>
                             <input type="text" class="form-control" id="editFirstName" name="firstName" required>
                         </div>
                         <div class="col-12 col-md-6">
-                            <label for="editLastName" class="form-label">Last Name</label>
+                            <label for="editLastName" class="form-label">SurName</label>
                             <input type="text" class="form-control" id="editLastName" name="lastName" required>
                         </div>
                         <div class="col-12 col-md-6">
